--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+	<script type="text/javascript" src="clock.js"></script>
+</head>
 <body>
-  hh
+	<canvas id="canvas" width="300" height="300"></canvas>
 </body>
